# DIR-BlockJobs

./: .gitignore  Notes  README.md  StressContract.mjs  [filename]  clear.sh  deploy.sh  event.rs  index.html  mainnet-deploy.sh  onlydeploy.sh  package.json  src.2333e50f.css  src.2333e50f.css.map  src.68751d12.css  src.813e8876.css  src.813e8876.css.map  src.8d2c5753.css  src.8d2c5753.css.map  src.bc0cc78f.css  src.bc0cc78f.css.map  src.c15fb954.css  src.e31bb0bc.css  src.e31bb0bc.css.map  untitled.sublime-workspace
contract/: Cargo.toml  build.sh
contract/ft/: Cargo.toml  Notes
contract/ft/src/: lib.rs
contract/marketplace/: Cargo.toml  Notes  Unused
contract/marketplace/src/: categories.rs  event.rs  external.rs  internal.rs  lib.rs  nft_core.rs  user.rs
contract/mediator/: Cargo.toml  Notes
contract/mediator/neardev/: dev-account  dev-account.env
contract/mediator/src/: lib.rs
contract/sales/src/: lib.rs
contract/src/: internal.rs  lib.rs  nft_core.rs
contract/test/sim/: main.rs
frontend/: package.json
frontend/assets/: categoriesData.json  main.css  tailwind.css  tokensData.json
frontend/public/: index.html
frontend/src/: .env  App.js  Firebase.js  config.js  contractsAccounts.json  firebase.js  index.html  index.js  state.js  utils.js
frontend/src/assets/: main.css  tailwind.css  tokensData.json
frontend/src/components/: BlockTokenDialog.js  BuyJobsCoinDialog.js  Chat.js  CreateDisputeDialog.js  CreateServiceDialog.js  DepositTokenDialog.js  DialogUserCreator.js  Footer.js  (+11 more)
sim/: package.json  test.js
sim/__tests__/: main.ava.ts
(+14 files in other folders)
