[package]
name = "mkt-servicios"
version = "0.1.0"
authors = ["dariofs.near","stolkerve.near"]
edition = "2021"

[dependencies]
near-sdk = "3.1.0"
#near-sdk-sim = "3.2.0"

[dev-dependencies]
near-sdk-sim = "3.2.0"


# remember to include a line for each contract
# non-fungible-token = { path = "./marketplace" }
# approval-receiver = { path = "./mediator" }
# token-receiver = { path = "./ft" }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
# remember to include a member for each contract
members = [
  "marketplace",
  "mediator",
  "ft",
]

[lib]
name = "test"
path = "test/sim/main.rs"